Рационы ZOOOV section tugadi

--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,6 @@ img{
   width: 100%;
   height: auto;
 }
-/* body{
-  background-image: url(./../img/bigdog.png);
-  background-repeat: no-repeat;
-  background-size:cover;
-  height: 500px;
-
-} */
 
 /*/header/*/
 .zooovheader{
@@ -45,14 +38,20 @@ padding-right: 100px;
   width: 700px;
 }
 .header__link{
-  color: rgb(191, 226, 87);
+  color: rgb(233, 146, 139);
 font-family: Montserrat;
-font-size: 16px;
+font-size: 18px;
 font-weight: 500;
 }
 :hover.header__link{
-  color: brown;
+  color: rgb(177, 69, 69);
 }
+:active.header.link{
+  color: rgb(25, 2, 2);
+}
+
+
+
 
 /* main */
 
@@ -104,6 +103,26 @@ border: none;
 padding: 13px 42px;
 background: rgb(150, 25, 20);
 }
+:hover.content__btn{
+  color: rgb(150, 25, 20);
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 600;
+line-height: 140%;
+letter-spacing: 0%;
+text-align: center;
+box-sizing: border-box;
+border: 1px solid rgb(150, 25, 20);
+border-radius: 8px;
+padding: 13px 42px;
+background-color: white;
+}
+:active.content__btn{
+  background-color: rgb(177, 69, 69);
+  color: white;
+}
+
+
 
 .whatbarf{
   display: flex;
@@ -159,6 +178,7 @@ color:rgb(150, 25, 20);
 margin-top: 80px;
 display: flex;
 gap: 150px;
+margin-bottom: 180px;
 }
 .eats__tit{
   color: rgb(0, 0, 0);
@@ -193,4 +213,160 @@ padding-top: 32px;
 }
 .eats__list2{
   padding-top: 40px;
+}
+
+
+
+
+
+.rule{
+  display: flex;
+  justify-content: space-between;
+}
+.rule__tit{
+  color: rgb(0, 0, 0);
+font-family: Oswald;
+font-size: 46px;
+font-weight: 700;
+line-height: 130%;
+letter-spacing: 2%;
+text-align: left;
+margin-bottom: 80px;
+}
+.rule__oval{
+  width: 180px;
+  position: absolute;
+  left: 220px;
+}
+.rule__text{
+  width: 777px;
+}
+
+.rule__item{
+  width: 280px;
+}
+.rule__title{
+  font-family: Montserrat;
+font-size: 16px;
+font-weight: 700;
+line-height: 130%;
+letter-spacing: 0%;
+text-align: left;
+margin-bottom: 4px;
+}
+.rule__text1{
+  color: rgb(159, 158, 157);
+font-family: Montserrat;
+font-size: 13px;
+font-weight: 400;
+line-height: 130%;
+letter-spacing: 0%;
+text-align: left;
+margin-bottom: 16px;
+}
+.rule__text2{
+  margin-bottom: 11px;color: rgb(67, 66, 66);
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.rule__text3{
+  color: rgb(159, 158, 157);
+font-family: Montserrat;
+font-size: 13px;
+font-weight: 400;
+line-height: 130%;
+letter-spacing: 0%;
+text-align: left;
+margin-bottom: 24px;
+}
+.rule__img{
+ background: rgb(244, 245, 245);
+}
+.rule__list{
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+.rule__btn{
+  color: rgb(150, 25, 20);
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 600;
+line-height: 140%;
+letter-spacing: 0%;
+text-align: center;
+box-sizing: border-box;
+border: 1px solid rgb(150, 25, 20);
+border-radius: 8px;
+padding: 13px 42px;
+background-color: white;
+}
+:hover.rule__btn{
+  background-color: rgb(177, 69, 69);
+  color: white;
+}
+:active.rule__btn{
+  background-color: rgb(150, 25, 20);
+  color: white;
+}
+
+
+.line{
+  background: rgb(234, 209, 208);
+  background-image: url(./../img/ruler.png);
+  background-repeat: no-repeat;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.line__tit{
+  padding-top: 52px;
+  width: 650px;
+  color: rgb(0, 0, 0);
+font-family: Montserrat;
+font-size: 28px;
+font-weight: 500;
+line-height: 140%;
+letter-spacing: 2%;
+text-align: left;
+padding-bottom: 54px;
+padding-left: 50px;
+}
+.line__btn{
+  border-radius: 8px;
+background: rgb(150, 25, 20);
+color: rgb(255, 255, 255);
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 600;
+line-height: 140%;
+letter-spacing: 0%;
+text-align: center;
+border: none;
+padding: 13px 42px;
+margin-right: 121px;
+}
+:hover.line__btn{
+  color: rgb(150, 25, 20);
+font-family: Montserrat;
+font-size: 16px;
+font-weight: 600;
+line-height: 140%;
+letter-spacing: 0%;
+text-align: center;
+box-sizing: border-box;
+border: 1px solid rgb(150, 25, 20);
+border-radius: 8px;
+padding: 13px 42px;
+background-color: white;
+}
+:active.line__btn{
+  background-color: rgb(177, 69, 69);
+  color: white;
 }
